# AIDD-30-Day-Challenge

./: README.md
Day_02/: GEMINI.md  Task_2.md  presentation.md  specification.md
Day_03/: Part_A.md
Day_04/: .env  GEMINI.md  app.py  main.py  pyproject.toml
Day_04/.gemini/: settings.json
Day_04/agent_tools/: pdf_reader.py  quiz_generator_agent.py  summarizer_agent.py
Day_06/: .gitignore
Day_06/.gemini/: settings.json
Day_07/: readme.md
Day_08/calculator/: calculator.py  pyproject.toml
Day_08/calculator/history/prompts/calc-expr-result/: 002-generate-task-list-for-calculator-feature.tasks.prompt.md  003-implement-calculator-feature.green.prompt.md  004-fix-syntax-error-in-tokenizer.refactor.prompt.md  005-move-cli-entry-point-and-resolve-module-error.refactor.prompt.md
Day_08/calculator/history/prompts/constitution/: 001-initialize-project-constitution.constitution.prompt.md
Day_08/calculator/specs/1-calc-expr-result/: plan.md  spec.md  tasks.md
Day_08/calculator/specs/1-calc-expr-result/checklists/: requirements.md
Day_08/calculator/src/lib/: calculator.py
Day_08/calculator/tests/integration/: test_cli.py
Day_08/calculator/tests/unit/: test_calculator.py
Day__04/: .env  .gitignore  GEMINI.md  pyproject.toml
Day__04/.gemini/: settings.json
Day__04/project/: app.py
Day__04/project/agent_tools/: pdf_reader.py  quiz_generator.py
